# shutter

./: Cargo.toml  LICENSE  README.md
src/: error.rs  image.rs  lib.rs  profile.rs  scrape.rs
src/app/: args.yaml  main.rs
