[package]
name = "instagram-scraper"
version = "0.1.0"
authors = ["Peter Nelson <peter@peterdn.com>"]

[dependencies]
reqwest         = "0.8.6"
serde           = "1.0"
serde_derive    = "1.0"
serde_json      = "1.0"

[lib]
name = "shutter"
path = "src/lib.rs"

[[bin]]
name = "instagram-scraper"
path = "src/app/main.rs"
